v.1.0.0-pre.33
   - Added unified PathInput control for consistent path editing across settings.
   - Added UI testing infrastructure and expanded unit test coverage.
   - Improved test infrastructure with comprehensive filesystem abstraction.

v.1.0.0-pre.32
   - Fixed unsaved changes warning appearing after saving project options.

v.1.0.0-pre.31
   - Fixed mass update dialog resizing when processing long project names.
   - Improved project ordering during mass updates to maintain consistency.

v.1.0.0-pre.30
   - Double-click projects in overview to open in IDE.
   - Fixed copy script button remaining disabled after deployment.

v.1.0.0-pre.29
   - Linux support: MDK2 Hub now available for Linux.
   - Cross-platform improvements for Hub/CLI communication.

v.1.0.0-pre.28
   - Simplified MDK2 folder structure (settings now at MDK2\settings.json instead of MDK2\Hub\settings.json).
   - Legacy .version files from previous MDK2 versions are now automatically cleaned up after import.
   - Hub window position and size are now properly managed by the OS on first run.

v.1.0.0-pre.27
   - Hub window now activates and comes to front when OpenHub build notification is triggered.
   - Now using the Mal.SourceGeneratedDI package.

v.1.0.0-pre.26
   - Configuration editor now displays settings in a single scrollable view (no tabs).
   - Added "Fix it" button to reorganize misplaced configuration settings.
   - INI parser now preserves comments and formatting when saving changes.
   - Prerequisites check only shows dialog when problems are found.
   - Reordered configuration options to prioritize minification settings.

v.1.0.0-pre.25
   - Fixed build notifications not registering projects in Hub (validates via mdk.ini files now).
   - Internal: Refactored project configuration system for better maintainability.


v.1.0.0-pre.23
   - Fixed Hub update card disappearing during download (critical state flow bug).

v.1.0.0-pre.22